internal/k8s/builder/testdata/multiple-instances.service.golden.yaml
# Copyright (c) HashiCorp, Inc.
# SPDX-License-Identifier: MPL-2.0

metadata:
  creationTimestamp: null
  labels:
    api-gateway.consul.hashicorp.com/created: "-62135596800"
    api-gateway.consul.hashicorp.com/managed: "true"
    api-gateway.consul.hashicorp.com/name: test-multiple-instances
    api-gateway.consul.hashicorp.com/namespace: ""
  name: test-multiple-instances
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 0
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 0
  selector:
    api-gateway.consul.hashicorp.com/created: "-62135596800"
    api-gateway.consul.hashicorp.com/managed: "true"
    api-gateway.consul.hashicorp.com/name: test-multiple-instances
    api-gateway.consul.hashicorp.com/namespace: ""
  type: ClusterIP
status:
  loadBalancer: {}
