internal/k8s/builder/testdata/static-mapping.yaml
apiVersion: api-gateway.consul.hashicorp.com/v1alpha1
kind: GatewayClassConfig
metadata:
  name: test-gateway-class-config
spec:
  logLevel: info
  consul:
    authentication:
      account: consul-api-gateway
      method: consul-api-gateway
    address:
      host.docker.internal
    ports:
      http: 443
  useHostPorts: true
  images:
    consul-api-gateway: "consul-api-gateway:1"
    envoy: "envoy:1"
  nodeSelector:
    "ingress-ready": "true"
  tolerations:
    - key: "key1"
      operator: "Equal"
      value: "value1"
      effect: "NoSchedule"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: test-gateway-class
spec:
  controller: "hashicorp.com/consul-api-gateway-gateway-controller"
  parametersRef:
    group: api-gateway.consul.hashicorp.com
    kind: GatewayClassConfig
    name: test-gateway-class-config
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: test-static-mapping
spec:
  gatewayClassName: test-gateway-class
  listeners:
  - protocol: HTTP
    port: 8083
    name: http
    allowedRoutes:
      namespaces:
        from: Same
  - protocol: HTTPS
    port: 8443
    name: https
    allowedRoutes:
      namespaces:
        from: Same
