internal/k8s/builder/testdata/tls-cert.deployment.golden.yaml
metadata:
  creationTimestamp: null
  labels:
    api-gateway.consul.hashicorp.com/created: "-62135596800"
    api-gateway.consul.hashicorp.com/managed: "true"
    api-gateway.consul.hashicorp.com/name: tls-cert-test
    api-gateway.consul.hashicorp.com/namespace: ""
  name: tls-cert-test
spec:
  selector:
    matchLabels:
      api-gateway.consul.hashicorp.com/created: "-62135596800"
      api-gateway.consul.hashicorp.com/managed: "true"
      api-gateway.consul.hashicorp.com/name: tls-cert-test
      api-gateway.consul.hashicorp.com/namespace: ""
  strategy: {}
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "false"
      creationTimestamp: null
      labels:
        api-gateway.consul.hashicorp.com/created: "-62135596800"
        api-gateway.consul.hashicorp.com/managed: "true"
        api-gateway.consul.hashicorp.com/name: tls-cert-test
        api-gateway.consul.hashicorp.com/namespace: ""
    spec:
      containers:
      - command:
        - /bin/sh
        - -ec
        - |2-

          export CONSUL_CACERT=/consul/tls/ca.pem
          cat <<EOF >/consul/tls/ca.pem
          CONSUL_CA_MOCKED
          EOF

          exec /bootstrap/consul-api-gateway exec -log-json \
            -log-level info \
            -gateway-host "$(IP)" \
            -gateway-name tls-cert-test \
            -gateway-namespace test \
            -consul-http-address $(HOST_IP) \
            -consul-http-port 8500 \
            -consul-xds-port  8502 \
            -envoy-bootstrap-path /bootstrap/envoy.json \
            -envoy-sds-address consul-api-gateway-controller.default.svc.cluster.local \
            -envoy-sds-port 9090
        env:
        - name: IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: HOST_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        image: envoyproxy/envoy-distroless:v1.22-latest
        name: consul-api-gateway
        ports:
        - containerPort: 20000
          name: ready
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: 20000
        resources: {}
        volumeMounts:
        - mountPath: /bootstrap
          name: bootstrap
        - mountPath: /certs
          name: certs
        - mountPath: /consul/tls
          name: ca
      initContainers:
      - command:
        - cp
        - /bin/consul-api-gateway
        - /bootstrap/consul-api-gateway
        image: hashicorp/consul-api-gateway:0.2.1
        name: consul-api-gateway-init
        resources: {}
        volumeMounts:
        - mountPath: /bootstrap
          name: bootstrap
        - mountPath: /certs
          name: certs
        - mountPath: /consul/tls
          name: ca
      volumes:
      - emptyDir: {}
        name: bootstrap
      - emptyDir: {}
        name: certs
      - emptyDir: {}
        name: ca
status: {}
